--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "firebase": "^4.10.1",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-i18n": "^2.0.12",
+    "react-navigation": "^1.1.2",
+    "redux-thunk": "^2.2.0",
+    "relative-date": "^1.1.3"
   }
 }
