--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^25.0.0",
     "firebase": "^4.10.1",
+    "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-i18n": "^2.0.12",
