Working on navigation

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^25.0.0",
     "firebase": "^4.10.1",
     "moment": "^2.20.1",
+    "native-base": "^2.3.10",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-navigation": "^1.1.2",
