--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-navigation": "^1.1.2",
+    "react-number-format": "^3.3.0",
     "redux-thunk": "^2.2.0",
     "relative-date": "^1.1.3"
   }
